<resources>
    <string name="app_name">PORA-projekt</string>
    <string name="title_camera">Camera</string>
    <string name="title_gforce">G-force</string>
    <string name="title_comment">Comment</string>
    <string name="title_simulacija">Simulacija</string>
    <string name="title_settings">Settings</string>
    <string name="fall_detected">PADEC ZAZNAN!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="username_text">Your username</string>
    <string name="password_text">Your password</string>
    <string name="credentials_title">Credentials</string>
    <string name="sync_frequency_title">Hitrost posodobitev</string>
    <string name="username_summary">Enter your username</string>
    <string name="password_summary">Enter your password</string>
    <string name="update_settings_title">Update Settings</string>
    <string name="update_interval_title">Update Interval</string>
    <string name="update_interval_summary">Interval in seconds</string>

</resources>