<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/credentials_title">

        <EditTextPreference
                app:key="username"
                app:title="@string/username_text"
                app:summary="@string/username_summary"
                app:useSimpleSummaryProvider="true" />

        <EditTextPreference
                app:key="password"
                app:title="@string/password_text"
                app:summary="@string/password_summary"
                app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/update_settings_title">

        <SeekBarPreference
                app:key="update_interval"
                app:title="@string/update_interval_title"
                app:summary="@string/update_interval_summary"
                app:defaultValue="60"
                app:min="5"
                app:showSeekBarValue="true" />


    </PreferenceCategory>

</PreferenceScreen>
