<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_gforce"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_gforce" />

    <item
        android:id="@+id/navigation_comment"
        android:icon="@drawable/bonuspack_bubble"
        android:title="@string/title_comment" />

    <item
        android:id="@+id/navigation_simulacija"
        android:icon="@drawable/ic_simulation_black_24dp"
        android:title="@string/title_simulacija" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>